...
private val LAST_WATERED_SPACING = 6.dp
private val SAVE_BUTTON_HEIGHT = 56.dp
private val DELETE_ICON_SPACING = 8.dp

/** Test tags for [EditPlantScreen]. */
object EditPlantScreenTestTags {
  const val SCROLLABLE_COLUMN = "scrollableColumn"
  const val PLANT_IMAGE = "plantImage"
  const val PLANT_NAME = "plantName"
  const val PLANT_LATIN = "plantLatin"
  const val LIGHT_EXPOSURE = "plantLightExposure"
  const val INPUT_PLANT_DESCRIPTION = "inputPlantDescription"
  const val LOCATION_TEXTFIELD = "plantLocation"
  const val LOCATION_DROPDOWN = "plantLocation"
  const val INPUT_LAST_WATERED = "inputLastWatered"
  const val ERROR_MESSAGE_DATE = "errorMessageDate"
  const val ERROR_MESSAGE_DESCRIPTION = "errorMessageDescription"
  const val ERROR_MESSAGE_NAME = "errorMessageName"
  const val ERROR_MESSAGE_LATIN_NAME = "errorMessageLatinName"
  const val ERROR_MESSAGE_LIGHT_EXPOSURE = "errorMessageLightExposure"

  const val PLANT_SAVE = "plantSave"
  const val PLANT_DELETE = "plantDelete"
  const val DATE_PICKER_BUTTON = "datePicker"
}

/**
 * Composable screen for editing a plant’s details.
 *
...
