...
import com.android.mygarden.R

object PopupScreenTestTags {
  const val CARD = "Card"
  const val TITLE = "Title"
  const val DISMISS_BUTTON = "DismissButton"
  const val CONFIRM_BUTTON = "ConfirmButton"
}

/** Dimensions used for the popups across the app */
object PopUpDimensions {
  val CARD_HEIGHT = 230.dp
  val CARD_PADDING = 16.dp
...
